--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Модальное окно для полноразмерного изображения
       Для того чтобы открыть, необходимо добавить на div.lightbox CSS-класс is-open
     -->
-    <div class="lightbox js-lightbox">
+    <div class="lightbox  js-lightbox">
       <div class="lightbox__overlay"></div>
 
       <div class="lightbox__content">
@@ -29,6 +29,7 @@
       ></button>
     </div>
 
-    <script src="app.js" type="module"></script>
+    <script src="./js/app.js" type="module"></script>
+    <script src="./js/galery_and_modal.js" type="module"></script>
   </body>
 </html>
